Archive2/9f/386bb8fb4afd62/output
cc1: warning: command line option '-std=c++11' is valid for C++/ObjC++ but not for C
main.cpp: In function 'main':
main.cpp:2:5: error: '__int128' is not supported for this target
     __int128 x;
     ^
main.cpp:2:14: warning: type defaults to 'int' in declaration of 'x' [-Wimplicit-int]
     __int128 x;
              ^
main.cpp:2:14: warning: unused variable 'x' [-Wunused-variable]
main.cpp:3:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
