Archive2/9f/386bb8fb4afd62/main.cpp
int main(void) {
    __int128 x;
}